--- a/src/html/hotelForm.html
+++ b/src/html/hotelForm.html
@@ -52,11 +52,11 @@
                         <guest-input v-bind:label='locale("PASS_CAT_CNN")' name="quantityChild" v-bind:published="true" v-bind:items="3" v-bind:num="hotel.quantityChilds" v-on:quantity-change="hotel.quantityChilds = $event"></guest-input>
                         <guest-input v-bind:label='locale("ROOMS")' name="Rooms" v-bind:published="true" v-bind:items="3" v-bind:num="hotel.rooms" v-on:quantity-change="hotel.rooms = $event"></guest-input>
                     </div>
-                    <div class="childs_flex" v-if="hotel.quantityChilds >= 0, hotel.ageChilds.length = hotel.quantityChilds">
+                    <div class="childs_flex" v-if="hotel.quantityChilds >= 0, hotel.childs.length = hotel.quantityChilds">
                         <label class="menu-title">{{ locale("PASS_AGE_CH") }}</label>
                         <div class="childs_block">
                             <div class="child_box" v-for="(item, i) in hotel.quantityChilds">
-                                <guest-input name="Child" v-bind:published="false" v-bind:items="12" v-on:quantity-change="hotel.ageChilds [i] = $event"></guest-input>
+                                <guest-input name="Child" v-bind:published="false" v-bind:items="12" v-bind:num="hotel.childs [i]" v-on:quantity-change="hotel.childs [i] = $event"></guest-input>
                             </div>
                         </div>
                     </div>
