--- a/src/html/hotelForm.html
+++ b/src/html/hotelForm.html
@@ -60,17 +60,7 @@
                             </div>
                         </div>
                     </div>
-                    <national-input v-bind:label='locale("NATIONALITY")' v-bind:items="hotel.nationalitys" v-bind:name="hotel.nationalityName" v-on:country-change="hotel.nationalityName = $event" v-on:code-change="hotel.nationalityCode = $event"></national-input>
-
-                    <!--
-                    <div>
-                        <input type="text" name="nationality" id="order-@currentPassNmb-country" class="typeahead-selectpicker galileo-country-select nationality_focus" v-model="hotel.nationalityName">
-                        <input class="input_val" type="hidden" name="NationalityCode"  v-model="hotel.nationalityCode">
-                        <input class="input_val" type="hidden" name="NationalityName"  v-model="hotel.nationalityName">
-                    </div>
-                    <span href="#" class="delete" v-bind:class="{'no-visiblity': hotel.nationalityName==null}" v-on:click="clearNationality"></span>
-                    <div class="error-box"></div>
-                     -->
+                    <national-input v-bind:label='locale("NATIONALITY")' :placeholder='locale("SEARCH")' v-bind:items="hotel.nationalitys" v-bind:name="hotel.nationalityName" v-on:country-change="hotel.nationalityName = $event" v-on:code-change="hotel.nationalityCode = $event"></national-input>
                     <span class="button-hide hidden-xs" v-on:click="onClickOutside">
                         <span class="hide-inner">{{locale("HIDE")}}</span>
                     </span>
