--- a/src/html/hotelForm.html
+++ b/src/html/hotelForm.html
@@ -9,7 +9,7 @@
                 <span class="link-right"></span>
             </label>
             <div class="control-field">
-                <hotel-input id="test" name="CityId" input-class="book-from" v-model="hotel.city" :placeholder="locale('BUSES_PLACEHOLDER')"></hotel-input>
+                <hotel-input name="CityId" input-class="book-from" v-model="hotel.city" :placeholder="locale('BUSES_PLACEHOLDER')"></hotel-input>
                 <div class="error-box"></div>
             </div>
         </div>
