refactoring - change .galileo.com.ua to .rezonuniversal.com in code && rezon-support/issues-tracker#2449

--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -419,7 +419,7 @@
 	<script type="text/javascript">
 		$(document).ready(function(){
 		    $("#rezon-forms").rezOnForm({
-				projectUrl: "https://domain.galileo.com.ua/", //Установите ссылку на свой проект
+				projectUrl: "https://domain.rezonuniversal.com/", //Установите ссылку на свой проект
 				defaultLang: "ru", // ua|ru|en
 				formType: "avia", // avia|railway|all,
 				formTarget: "_blank" // '_blank' - загружает поисковую выдачу в новое окно браузера., '_self' - в текущее окно.
