Change behavior of form submit

--- a/src/html/hotelForm.html
+++ b/src/html/hotelForm.html
@@ -3,7 +3,7 @@
     <input type="hidden" name="IsNewSearch" value="false" id="IsNewSearch" />
     <div class="fields-container">
         <div class="field station from">
-            <label data-local="true" data-localtext="FROM" class="menu-title">
+            <label data-local="true" class="menu-title">
                 <span class="link-left"></span>
                 {{locale("CITY")}}
                 <span class="link-right"></span>
